<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Automated Tool Tray Builder</string>
    <string name="action_settings">Settings</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="about">About</string>
    <string name="please_select">Please select</string>
    <string name="empty"></string>
    <string name="loading">Please wait..</string>
    <string name="check_your_files">Failed loading, file is corrupt or out of memory!\nPlease try again</string>
    <string name="please_input">Please specify file format and file name:</string>
    <string name="save_to_file">Save to file</string>
    <string name="save">Save</string>
    <string name="rotate_left">Rotate right</string>
    <string name="rotate_right">Rotate left</string>
    <string name="perspective_crop">Perspective crop</string>
    <string name="regular_crop">Regular crop</string>
    <string name="crop">Crop</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="skip">No Crop</string>
    <string name="quit">Quit</string>
    <string name="share">Share</string>
    <string name="trace_failed">Trace failed..</string>
    <string name="save_failed">Save failed..</string>
    <string name="email_author">This app is a port and front end of potrace on Android! Any problems or suggestions please email:</string>
    <string name="email_address">jiang.peng1997@gmail.com</string>
    <string name="project_see">This is an open source project, more information please see:</string>
    <string name="project_address">https://github.com/jiangpeng79/antrace</string>
    <string name="app_version"></string>
    <string name="permission_warning">This app requires write permission to your external storage. Please grant the permission.</string>
    <string name="permission_warning_quit">This app requires write permission to your external storage. Please grant the permission from Settings and try again.</string>
    <string name="about_updated_statement">This app is an updated version of the potrace port from antrace.
        The app has been adapted from antrace to have a cleaner UI, and be able to be used for modern devices.
        NJIT/Rutgers students have contributed to the code as part of their senior capstones:</string>
    <string name="coder1">Terence Au</string>
    <string name="coder1_git">https://github.com/Takosheen</string>
    <string name="coder2">Bartlomiej Rutnya</string>
    <string name="coder2_git">https://github.com/ClankerTanker</string>
    <string name="coder3">Rubens Joseph</string>
    <string name="coder3_git">https://github.com/rmj100</string>
    <string name="antrace_author">Finally - the author of antrace can be contacted through </string>
    <string name="antrace_git">The github can be found here: </string>
    <string name="about_outro">For the future students that will be working on this project, good luck!</string>
</resources>
